hydroflow/tests/compile-fail/surface_demux_port_elided.stderr
error: Output port from `demux(..)` must be specified and must be a valid identifier.
  --> tests/compile-fail/surface_demux_port_elided.rs:14:9
   |
14 |         my_demux -> for_each(std::mem::drop);
   |         ^^^^^^^^

error: `demux(..)` closure argument `odds` missing corresponding output port.
 --> tests/compile-fail/surface_demux_port_elided.rs:5:72
  |
5 |         my_demux = source_iter(0..10) -> demux(|item, var_args!(evens, odds)| {
  |                                                                        ^^^^

warning: unused import: `var_args`
 --> tests/compile-fail/surface_demux_port_elided.rs:1:35
  |
1 | use hydroflow::{hydroflow_syntax, var_args};
  |                                   ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
